# nonlinear_LODE_GPs

./: .gitignore  MWE.py  README.md  pyproject.toml  test_kernels.py
src/: example.py  helpers.py  kernels.py  lodegp.py  simulate_system.py  systems.py
src/nonlinear-LODE-GPs/: changepoint_example.py  equilibrium_example.py  example.py  helpers.py  kernels copy.py  kernels.py  likelihoods.py  localgp.py  localgp_example.py  lodegp.py  masking.py  mean_modules.py  mpc.py  mpc_example.py  mpc_example_global.py  sum-gp_example.py  sum_gp.py  weighting.py
src/nonlinear-LODE-GPs/example/: mpc_example.py  se-lodegp_example.py
src/nonlinear-LODE-GPs/systems/: __init__.py  linearize.py  nonlinear_threetank.py  nonlinear_watertank.py  systems.py
src/nonlinear_LODE_GPs/: __init__.py  _deprecated.py  combined_gp.py  combined_posterior.py  feedback_linearization.py  gp.py  helpers.py  kernels.py  likelihoods.py  localgp.py  lodegp.py  mean_modules.py  mpc.py  noise_models.py  simulate_system.py  sum_gp.py  weighting.py
src/nonlinear_LODE_GPs/example/: classsic_mpc_example.py  combined_gp_example.py  combined_posterioir_example.py  diagonal_example.py  equilibrium_example.py  exactLin_example.py  exactLin_example_2.py  exactLin_example_3.py  example.py  feedbackLin_example.py  localgp_example.py  mpc_example.py  mpc_example_global.py  se-lodegp_example.py  sum-gp_example.py
src/nonlinear_LODE_GPs/systems/: __init__.py  inverted_pendulum.py  inverted_pendulum_2.py  nonlinear_threetank.py  (+2 more)
src/systems/: __init__.py  inverted_pendulum.py  linearize.py  nonlinear_threetank.py
(+4 files in other folders)
